# votesecure

./: .gitignore  LOCAL_DEVELOPMENT_GUIDE.md  README.md  WITHDRAWAL_IMPLEMENTATION_GUIDE.md  index.html  package.json  vite.config.ts
.claude/: settings.local.json
.claude/hooks/: SessionStart
PythonSetup/: ReadMe.md  VoteSecure_create_lockscript_cell.md  VoteSecure_create_lockscript_cell.py  deployment_config.toml  deployment_info.json  deployment_transaction.json  votesecure_config.json  votesecure_lockscript_full.md
PythonSetup/contract/: Cargo.toml
PythonSetup/contract/src/: main.rs
doc/: LICENSE  Votesecure_White_Paper.md  Votesecure_White_Paper.rtf  architecture.txt  votesecure_architecture.md
documentation/: ClaudeCreationComment_18.10.2025  FolderList.txt  Implementation Summary_18.10.2025  QUICKSTART.md  SETUP_INSTRUCTIONS.md  VoteSecure_Claude_Doc.docx  architecture.txt
src/: blockchain.js  ckbServiceBridge.js  ckbService_ccc.js  polyfills.ts  votesecure_config.json
web/: common.css  index.css  organizer.css  organizer.html  organizer.js  privacy.html  terms.html  viewElectionDetails.css  viewElectionDetails.html  viewElectionDetails.js  voter.css  voter.html  voter.js  votesecure.css  votesecure_config.json
